plugins {
    id "architectury-plugin" version "3.4-SNAPSHOT"
    id "dev.architectury.loom" version "0.11.0-SNAPSHOT" apply false
}

architectury {
    minecraft = rootProject.minecraft_version
}

subprojects {
    apply plugin: "dev.architectury.loom"

    loom {
        silentMojangMappingsLicense()
    }

    dependencies {
        minecraft "com.mojang:minecraft:${rootProject.minecraft_version}"
        // The following line declares the mojmap mappings, you may use other mappings as well
        mappings loom.officialMojangMappings()
        // The following line declares the yarn mappings you may select this one as well.
        // mappings "net.fabricmc:yarn:1.18.2+build.2:v2"
    }
}

allprojects {
    apply plugin: "java"
    apply plugin: "architectury-plugin"
    apply plugin: "maven-publish"

    archivesBaseName = rootProject.archives_base_name
    version = rootProject.mod_version
    group = rootProject.maven_group

    repositories {
        maven {
            url "https://maven.architectury.dev/"
        }
        maven {
            url "https://maven.saps.dev/minecraft"
            content {
                includeGroup "dev.latvian.mods"
            }
        }
        maven {
            url "https://www.cursemaven.com"
            content {
                includeGroup "curse.maven"
            }
        }

        maven {
            url "https://modmaven.dev/"
            content {
                includeGroup "mekanism"
                includeGroup "mezz.jei"
            }
        }

        maven {
            url "https://maven.architectury.dev/"
            content {
                includeGroup "me.shedaniel"
            }
        }
        maven {
            url "https://maven.saps.dev/minecraft"
            content {
                includeGroup "dev.latvian.mods"
                includeGroup "dev.ftb.mods"
            }
        }
        maven {
            name = "Modmuss"
            url = "https://maven.modmuss50.me/"
        }
        maven {
            name = "Jared"
            url = "https://maven.blamejared.com/"
        }
        maven {
            url = "https://maven.terraformersmc.com/" // for trinkets
        }
        maven {
            name = "Ladysnake Libs"
            url = 'https://ladysnake.jfrog.io/artifactory/mods'
        }
        maven {
            name = "BuildCraft" // for LBA
            url = "https://mod-buildcraft.com/maven"
        }
        maven {
            name "entity reach"
            url "https://maven.jamieswhiteshirt.com/libs-release/"
        }
        maven {
            url "https://jitpack.io" // for step height eam
        }
        maven {
            url "https://maven.shedaniel.me/" // for rei
        }
        maven {
            url "https://server.bbkr.space/artifactory/libs-release/" // for bannerplusplus
        }
        maven {
            name = "ParchmentMC"
            url = "https://maven.parchmentmc.net/"
        }
    }

    tasks.withType(JavaCompile) {
        options.encoding = "UTF-8"
        options.release = 17
    }

    java {
        withSourcesJar()
    }
}
